--- a/IonQuHack2025.ipynb
+++ b/IonQuHack2025.ipynb
@@ -13,6 +13,42 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# test"
+      ],
+      "metadata": {
+        "id": "gBCTZpQwZ6Jc"
+      },
+      "id": "gBCTZpQwZ6Jc",
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git status"
+      ],
+      "metadata": {
+        "id": "i6J8G5DKZz5P",
+        "outputId": "0607cc2f-7888-4b64-b89b-2271b0088653",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "i6J8G5DKZz5P",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "ecfc7a22-96a2-4ecf-915d-fbf113dec30a",
       "metadata": {
@@ -21,16 +57,6 @@
       "source": [
         "Before proceeding, register once.  Then, comment out the registration function call to avoid re-registering when running the notebook again."
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Can you see this line?"
-      ],
-      "metadata": {
-        "id": "H-CDlRbyZUsO"
-      },
-      "id": "H-CDlRbyZUsO"
     },
     {
       "cell_type": "code",
@@ -156,7 +182,7 @@
       "id": "d9c70014-233e-4828-a94c-74970f7827e5",
       "metadata": {
         "id": "d9c70014-233e-4828-a94c-74970f7827e5",
-        "outputId": "9e11afe9-45cc-4520-e1c2-43edbc7bc512"
+        "outputId": "07120ce6-bb7b-445a-9118-ca9a506fd200"
       },
       "outputs": [
         {
@@ -461,7 +487,7 @@
       "id": "1631098c-1873-46c4-bf02-52ce55e83808",
       "metadata": {
         "id": "1631098c-1873-46c4-bf02-52ce55e83808",
-        "outputId": "a9f2c3d4-f1b1-42b2-8707-931479337ff9"
+        "outputId": "d6d846ee-881f-4bd1-fef5-7df1568094ac"
       },
       "outputs": [
         {
@@ -564,7 +590,7 @@
       "id": "7eb99bfb-eddc-483f-a379-6fd916d06551",
       "metadata": {
         "id": "7eb99bfb-eddc-483f-a379-6fd916d06551",
-        "outputId": "9b5af0d7-6f83-4794-8d63-992836e5bcce"
+        "outputId": "f28af9cf-bcdd-49e3-a75d-d383534431f4"
       },
       "outputs": [
         {
@@ -684,7 +710,7 @@
       "id": "2b4de2de-1ce6-43ff-92c8-3893c0a496bd",
       "metadata": {
         "id": "2b4de2de-1ce6-43ff-92c8-3893c0a496bd",
-        "outputId": "fefaa56c-c121-4a54-8fab-b5e5f489853e"
+        "outputId": "1e7d3cdc-1ce5-47c7-fae8-23e91b6f15e2"
       },
       "outputs": [
         {
@@ -779,7 +805,7 @@
       "id": "45ba1ff9-c237-4955-bf48-46fbcfec7aa3",
       "metadata": {
         "id": "45ba1ff9-c237-4955-bf48-46fbcfec7aa3",
-        "outputId": "0d2ca1b4-e929-4784-aa9f-b2e79f3b2aed"
+        "outputId": "716b84ec-9b83-41c5-f69a-20222a98b78b"
       },
       "outputs": [
         {
@@ -1157,7 +1183,7 @@
       "id": "192e3c7f-1d7f-4de6-8448-9a11ed450d68",
       "metadata": {
         "id": "192e3c7f-1d7f-4de6-8448-9a11ed450d68",
-        "outputId": "1922f199-c935-42f6-aad6-c1e20968bdac"
+        "outputId": "3561427d-43d9-4abc-9c00-850a6d851b47"
       },
       "outputs": [
         {
@@ -1526,7 +1552,7 @@
       "metadata": {
         "scrolled": true,
         "id": "082b9e00-8f19-4790-98ef-b0aeb3fd153a",
-        "outputId": "7f56948f-3b7d-43e1-8b3e-72b0e474b135"
+        "outputId": "73947255-342f-4108-b3e6-3f7af0dfe92d"
       },
       "outputs": [
         {
@@ -1565,7 +1591,7 @@
       "id": "d5d2564d-373e-444b-9853-0fe75af5ca31",
       "metadata": {
         "id": "d5d2564d-373e-444b-9853-0fe75af5ca31",
-        "outputId": "cee8ff6c-4e9f-4d69-a5df-7382b454f80a"
+        "outputId": "8ddb1872-faf5-4ee1-da0f-d94b434fd8eb"
       },
       "outputs": [
         {
@@ -1609,7 +1635,7 @@
       "id": "ba3c6de3-a478-4062-a148-8cdea526d47b",
       "metadata": {
         "id": "ba3c6de3-a478-4062-a148-8cdea526d47b",
-        "outputId": "54ddb0e8-2ccd-464c-b604-40f7881bb6fd"
+        "outputId": "b22e38e6-4f28-4d9c-8313-caa9bcfe9e49"
       },
       "outputs": [
         {
@@ -1693,7 +1719,7 @@
       "id": "a86afe26-3e79-427b-b488-b94186936f6d",
       "metadata": {
         "id": "a86afe26-3e79-427b-b488-b94186936f6d",
-        "outputId": "86e73642-5ea9-4172-a3b5-d36783f4ee82"
+        "outputId": "1c0c3bf2-fbf3-47c8-f11e-2e68288577e6"
       },
       "outputs": [
         {
@@ -1782,7 +1808,7 @@
       "id": "7d5c3313-4748-4df3-b01d-84b74da65ca6",
       "metadata": {
         "id": "7d5c3313-4748-4df3-b01d-84b74da65ca6",
-        "outputId": "50e64557-78bc-47f3-b192-349e16624c94"
+        "outputId": "7e27173f-6857-4e66-9d57-844804e9d20a"
       },
       "outputs": [
         {
@@ -1863,7 +1889,7 @@
       "id": "13bf203b-fd7d-4e99-a4f0-016488401260",
       "metadata": {
         "id": "13bf203b-fd7d-4e99-a4f0-016488401260",
-        "outputId": "ab91c735-eb4d-450f-9d94-c50e51ff4eea"
+        "outputId": "c801e262-da18-435a-ca81-1264fd3978dd"
       },
       "outputs": [
         {
